# influence-maximization

./: .gitignore  CMakeLists.txt
include/: version.gen.h
src/: arc.cpp  arc.h  influence-maximization.cpp  shard_index.cpp  shard_index.h
